patch: fix bumpversion config

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,5 +5,5 @@ tag = True
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:notion_sync/__init__.py]
+[bumpversion:file:notion_log_exec/__init__.py]
 
